version/0.26/_sources/api/solver/_autosummary/settings/auto_options.rst.txt
:orphan:

.. _auto_options:

auto_options
============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.auto_options.auto_options
    :show-inheritance:

.. rubric:: Attributes

============================================================================================   ====================================================================

Attribute                                                                                                                                                   Summary

============================================================================================   ====================================================================
:ref:`proximity_tolerance <proximity_tolerance>`                                                                           Specification of auto pairing tolerance.

:ref:`set_default_name_prefix <set_default_name_prefix>`                                                         Specification of auto pairing default name prefix.

:ref:`set_minimum_area_percentage <set_minimum_area_percentage>`                                       Set the minimum area percentage for mesh interface creation.

:ref:`pairing_between_different_cell_zones_only <pairing_between_different_cell_zones_only>`        Pairing between interface zones from different cell zones only.

:ref:`pairing_between_interface_zones_only <pairing_between_interface_zones_only>`                                            Pairing between interface zones only.

:ref:`keep_empty_interface <keep_empty_interface>`                                                 Keep empty interfaces during one-to-one mesh interface creation.

============================================================================================   ====================================================================

.. rubric:: Methods

==========================================================================   =======================================================================================

Method                                                                                                                                                       Summary

==========================================================================   =======================================================================================
:ref:`naming_option <naming_option>`                                             Specify whether or not to include an informative suffix to the mesh interface name.

:ref:`set_one_to_one_pairing_tolerance <set_one_to_one_pairing_tolerance>`                                                      Set one-to-one adjustable tolerance.

==========================================================================   =======================================================================================

.. rubric:: Included in:

========================================   ===================================

Parent                                                                 Summary

========================================   ===================================
:ref:`mesh_interfaces <mesh_interfaces>`       Enter the mesh interfaces menu.

========================================   ===================================

